[REFACTOR] Changed models, repository, service, using jparepo; Added prometheus setup(not finished)